k8s/overlay/develop/deployment-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botpress-server
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "botpress-server:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  template:
    spec:
      volumes:
        - name: bp-storage
          persistentVolumeClaim:
            claimName: bp-storage    
      containers:
      - name: botpress-server
        image: image-registry.openshift-image-registry.svc:5000/mpizarro-dev/botpress-server:latest
        volumeMounts:
          - name: bp-storage
            mountPath: /botpress/data
          - name: bp-storage
            mountPath: /botpress/pre-trained
          - name: bp-storage
            mountPath: /botpress/stop-words
          - name: bp-storage
            mountPath: /botpress/log
