k8s/overlay/develop/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: botpress-server
  labels:
    app: botpress-server
    app.kubernetes.io/component: botpress-server
    app.kubernetes.io/instance: botpress-server
    app.kubernetes.io/name: botpress-server
    app.kubernetes.io/part-of: botpress-server
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: '12.18'
spec:
  host: botpress-server-mpizarro-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: botpress-server
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
